Fixing the background issues on safari

--- a/contactstyle.css
+++ b/contactstyle.css
@@ -11,6 +11,11 @@
   align-items: center;
   justify-content: center;
   background-attachment: fixed;
+  filter: none;
+  -webkit-filter: blur(0px);
+  -moz-filter: blur(0px);
+  -ms-filter: blur(0px);
+  filter: progid:DXImageTransform.Microsoft.Blur(PixelRadius='0');
 }
 /* Styles the get in touch text */
 .contactBanner h2 {
@@ -98,7 +103,6 @@
   position: relative;
   border: 1px solid rgba(0, 0, 0, 0.5);
 }
-
 
 .contactForms form input::placeholder {
   position: absolute;
