--- a/indexStyle.css
+++ b/indexStyle.css
@@ -111,6 +111,11 @@ body {
   background-blend-mode: darken;
   width: 100%;
   background-attachment: fixed;
+  filter: none;
+  -webkit-filter: blur(0px);
+  -moz-filter: blur(0px);
+  -ms-filter: blur(0px);
+  filter: progid:DXImageTransform.Microsoft.Blur(PixelRadius='0');
 }
 
 .bannerHeader div {
